# myMalloc

./: CMakeLists.txt  README.md  allocator.cpp  allocator.h  main.cpp
.cache/clangd/index/: Allocator.cpp.4260D046CE192F46.idx  allocator.cpp.92F9F1BCB3366C69.idx  allocator.h.9BB909C578581E9A.idx  main.cpp.E56D2EBE484266CD.idx  tests.cpp.34D2AE4E26E7C54A.idx
src/: CMakeLists.txt
src/allocator/: allocator.cpp  allocator.h
tests/: CMakeLists.txt  tests.cpp
